--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>logo</li>
+            <li>menu1</li>
+            <li>menu2</li>
+            <li>menu3</li>
+        </ul>
+    </nav>
+    <header>
+        <h1>Product legend</h1>
+        <form action="">
+            <input type="email">
+            <input type="submit">
+        </form>
+    </header>
+    <section>
+        <div>specs1</div>
+        <div>specs2</div>
+        <div>specs3</div>   
+    </section>
+    <section>
+        <video src=""></video>
+    </section>
+    <section>
+        <div>product1</div>
+        <div>product2</div>
+        <div>product3</div>
+    </section>
+    <footer>
+        Website footer
+    </footer>
 </body>
 </html>
