HTML schema ended

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>logo</li>
-            <li>menu1</li>
-            <li>menu2</li>
-            <li>menu3</li>
-        </ul>
-    </nav>
+    <header id="header">
+        <img id="header-img" src="" alt="">
+        <nav id="nav-bar">
+            <ul>
+                <li class="nav-link"><a href="">menu1</a></li>
+                <li class="nav-link"><a href="">menu2</a></li>
+                <li class="nav-link"><a href="">menu3</a></li>
+            </ul>
+        </nav>
+    </header>
     <header>
         <h1>Product legend</h1>
-        <form action="">
-            <input type="email">
-            <input type="submit">
+        <form id="form" action="https://www. reecodecamp.com/email-submit">
+            <input id="email" type="email" placeholder="Enter your email address" required>
+            <input id="submit" type="submit">
         </form>
     </header>
     <section>
@@ -29,7 +31,7 @@
         <div>specs3</div>   
     </section>
     <section>
-        <video src=""></video>
+        <video id="video" src=""></video>
     </section>
     <section>
         <div>product1</div>
