HTML header fixed

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             </ul>
         </nav>
     </header>
-    <header>
+    <section>
         <h1>Product legend</h1>
         <form id="form" action="https://www. reecodecamp.com/email-submit">
             <input id="email" type="email" placeholder="Enter your email address" required>
             <input id="submit" type="submit">
         </form>
-    </header>
+    </section>
     <section>
         <div>specs1</div>
         <div>specs2</div>
