--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header id="header">
-        <img id="header-img" src="" alt="">
         <nav id="nav-bar">
-            <ul>
+            <ul class="nav-Links">
+                <li class="nav-link"><a href="#"><img id="header-img" src="" alt=""></a></li>
                 <li class="nav-link"><a href="">menu1</a></li>
                 <li class="nav-link"><a href="">menu2</a></li>
                 <li class="nav-link"><a href="">menu3</a></li>
