--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="header">
         <nav id="nav-bar">
             <ul class="nav-Links">
-                <li class="nav-link"><a href="#"><img id="header-img" src="" alt=""></a></li>
+                <li class="nav-link" id="header-img"><a href="#"><img src="#" alt="Future logo"></a></li>
                 <li class="nav-link"><a href="">menu1</a></li>
                 <li class="nav-link"><a href="">menu2</a></li>
                 <li class="nav-link"><a href="">menu3</a></li>
