section1 HTML corrected and CSS added

--- a/index.html
+++ b/index.html
@@ -6,31 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="header">
         <nav id="nav-bar">
             <ul class="nav-Links">
                 <li class="nav-link" id="header-img"><a href="#"><img src="#" alt="Future logo"></a></li>
-                <li class="nav-link"><a href="">menu1</a></li>
-                <li class="nav-link"><a href="">menu2</a></li>
-                <li class="nav-link"><a href="">menu3</a></li>
+                <li class="nav-link"><a href="">Features</a></li>
+                <li class="nav-link"><a href="">How it Works</a></li>
+                <li class="nav-link"><a href="">Pricing</a></li>
             </ul>
         </nav>
     </header>
-    <section>
-        <h1>Product legend</h1>
+    <section id="section1">
+        <h1>AUTOMOTIVE PERFECTION PASSIONATES</h1>
+        <img id="shiftImg" src="shifting.jpg" alt="Car shifting gear">
         <form id="form" action="https://www. reecodecamp.com/email-submit">
-            <input id="email" type="email" placeholder="Enter your email address" required>
-            <input id="submit" type="submit">
+            <input id="email" type="email" placeholder="Enter your email address" required><br>
+            <input id="submit" type="submit" value="GET STARTED">
         </form>
     </section>
-    <section>
+    <section id="section2">
         <div>specs1</div>
         <div>specs2</div>
         <div>specs3</div>   
     </section>
-    <section>
+    <section id="section3">
         <video id="video" src=""></video>
     </section>
     <section>
