--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div>specs3</div>   
     </section>
     <section id="section3">
-        <video id="video" src=""></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YTd25YC_dNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section>
         <div>product1</div>
