--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Product Landing Page</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/77c4e13a1c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header id="header">
@@ -28,9 +29,10 @@
         </form>
     </section>
     <section id="section2">
-        <div>specs1</div>
-        <div>specs2</div>
-        <div>specs3</div>   
+        <ul class="specs">
+            <li> <i  class="fas fa-money-bill-alt fa-5x"></i> Protect one of your most valuable possessions with the best Detailing products applied just by experts</li>
+
+        </ul>
     </section>
     <section id="section3">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YTd25YC_dNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
