All icons added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </section>
     <section id="section2">
         <ul class="specs">
-            <li> <i  class="fas fa-money-bill-alt fa-5x"></i> Protect one of your most valuable possessions with the best Detailing products applied just by experts</li>
+            <li><i class="fas fa-shield-alt fa-5x"></i></li>
+            <li><i class="fas fa-money-bill-alt fa-5x"></i></li>
             <li><i class="fas fa-cloud-sun fa-5x"></i></li>
             <li><i class="fas fa-hand-sparkles fa-5x"></i></li>
             <li><i class="fas fa-car fa-5x"></i></li>
