--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav id="nav-bar">
             <ul class="nav-Links">
                 <li class="nav-link" id="header-img"><a href="#"><img src="#" alt="Future logo"></a></li>
-                <li class="nav-link"><a href="">Features</a></li>
-                <li class="nav-link"><a href="">How it Works</a></li>
-                <li class="nav-link"><a href="">Pricing</a></li>
+                <li class="nav-link"><a href="#features">Features</a></li>
+                <li class="nav-link"><a href="#video">How it Works</a></li>
+                <li class="nav-link"><a href="#pricing">Pricing</a></li>
             </ul>
         </nav>
     </header>
@@ -28,19 +28,49 @@
             <input id="submit" type="submit" value="GET STARTED">
         </form>
     </section>
-    <section id="section2">
-        <ul class="specs">
-            <li><i class="fas fa-shield-alt fa-5x"></i></li>
-            <li><i class="fas fa-money-bill-alt fa-5x"></i></li>
-            <li><i class="fas fa-cloud-sun fa-5x"></i></li>
-            <li><i class="fas fa-hand-sparkles fa-5x"></i></li>
-            <li><i class="fas fa-car fa-5x"></i></li>
-        </ul>
-    </section>
-    <section id="section3">
+    <div class="container">
+        <section id="features">
+            <div class="grid">
+                <div class="icon"><i class="fas fa-shield-alt fa-5x"></i></div>
+                <div class="desc">
+                    <h2>Title</h2>
+                    <p>first icon description</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="icon"><i class="fas fa-money-bill-alt fa-5x"></i></div>
+                <div class="desc">
+                    <h2>Title</h2>
+                    <p>second icon description</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="icon"><i class="fas fa-cloud-sun fa-5x"></i></div>
+                <div class="desc">
+                    <h2>Title</h2>
+                    <p>third icon description</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="icon"><i class="fas fa-hand-sparkles fa-5x"></i></div>
+                <div class="desc">
+                    <h2>Title</h2>
+                    <p>fourth icon description</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="icon"><i class="fas fa-car fa-5x"></i></div>
+                <div class="desc">
+                    <h2>Title</h2>
+                    <p>fifth icon description</p>
+                </div>
+            </div>
+        </section>
+    </div>
+    <section id="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YTd25YC_dNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
-    <section>
+    <section id="pricing">
         <div>product1</div>
         <div>product2</div>
         <div>product3</div>
