--- a/index.html
+++ b/index.html
@@ -33,36 +33,36 @@
             <div class="grid">
                 <div class="icon"><i class="fas fa-shield-alt fa-5x"></i></div>
                 <div class="desc">
-                    <h2>Title</h2>
-                    <p>first icon description</p>
+                    <h2>Longtime Protection</h2>
+                    <p>From 3 and up to 5 years of total paint protection.</p>
                 </div>
             </div>
             <div class="grid">
                 <div class="icon"><i class="fas fa-money-bill-alt fa-5x"></i></div>
                 <div class="desc">
-                    <h2>Title</h2>
-                    <p>second icon description</p>
+                    <h2>Saves Money</h2>
+                    <p>Adds multiple layers of paint protection to avoid expensive paint fixes.</p>
                 </div>
             </div>
             <div class="grid">
                 <div class="icon"><i class="fas fa-cloud-sun fa-5x"></i></div>
                 <div class="desc">
-                    <h2>Title</h2>
-                    <p>third icon description</p>
+                    <h2>Fights Any Weather</h2>
+                    <p>Full protection against sun, rain, cold or any other weather condition.</p>
                 </div>
             </div>
             <div class="grid">
                 <div class="icon"><i class="fas fa-hand-sparkles fa-5x"></i></div>
                 <div class="desc">
-                    <h2>Title</h2>
-                    <p>fourth icon description</p>
+                    <h2>Remains Clean</h2>
+                    <p>Hydrophobic properties prevent dirt to stick the paint, keeping your car clean during long journeys.</p>
                 </div>
             </div>
             <div class="grid">
                 <div class="icon"><i class="fas fa-car fa-5x"></i></div>
                 <div class="desc">
-                    <h2>Title</h2>
-                    <p>fifth icon description</p>
+                    <h2>Your Vehicle</h2>
+                    <p>The MOST important for any automotive passionate, keep it stunning, shiny, and like brand new always.</p>
                 </div>
             </div>
         </section>
