--- a/index.html
+++ b/index.html
@@ -71,12 +71,50 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YTd25YC_dNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section id="pricing">
-        <div>product1</div>
-        <div>product2</div>
-        <div>product3</div>
+        <div class="product" id="exterior">
+            <div>Exterior Coating</div>
+            <img class="productImage" src="Exterior.jpg" alt="Exterior car coating image">
+            <h2>$700</h2>
+            <ol>
+                <li>General 3 Year coating.</li>
+                <li>Windows.</li>
+                <li>Rims.</li>
+                <li>complete exterior detailing.</li>
+            </ol>
+            <button class="btn">Schedule</button>
+        </div>
+        <div class="product" id="interiorEngine">
+            <div>Full 3 Year detailing</div>
+            <img class="productImage" src="interior.jpg" alt="Exterior car coating image">
+            <h2>$850</h2>
+            <ol>
+                <li>>Complete Vehicle 3 Year coating.</li>
+                <li>Full Exterior Coating. </li>
+                <li>Interior detailing with coating protection.</li>
+                <li>Engine like new and protected.</li>
+            </ol>
+            <button class="btn">Schedule</button>
+        </div>
+        <div class="product" id="exterior">
+            <div>5 Year complete coating process</div>
+            <img class="productImage" src="engine.jpg" alt="Exterior car coating image">
+            <h2>$1.100</h2>
+            <ol>
+                <li>Multiple protection layers applied to the entire Vehicle.</li>
+                <li>Exterior included.</li>
+                <li>Engine and Interior included.</li>
+                <li>1 Maintenience product application included</li>
+            </ol>
+            <button class="btn">Schedule</button>
+        </div>
     </section>
     <footer>
-        Website footer
+        <ul>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+        </ul>
+        <span>Copyright 2021, Daniel Cubides Car detailing</span>
     </footer>
 </body>
 </html>
