--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="header">
         <nav id="nav-bar">
             <ul class="nav-Links">
-                <li class="nav-link" id="header-img"><a href="#"><img src="#" alt="Future logo"></a></li>
+                <li class="nav-link headerImage"><a href="#"><img id="header-img" src="#" alt="Future logo"></a></li>
                 <li class="nav-link"><a href="#features">Features</a></li>
                 <li class="nav-link"><a href="#video">How it Works</a></li>
                 <li class="nav-link"><a href="#pricing">Pricing</a></li>
@@ -88,7 +88,7 @@
             <img class="productImage" src="interior.jpg" alt="Exterior car coating image">
             <h2>$850</h2>
             <ol>
-                <li>>Complete Vehicle 3 Year coating.</li>
+                <li>Complete Vehicle 3 Year coating.</li>
                 <li>Full Exterior Coating. </li>
                 <li>Interior detailing with coating protection.</li>
                 <li>Engine like new and protected.</li>
