Advanced CSS added

--- a/index.html
+++ b/index.html
@@ -72,31 +72,31 @@
     </section>
     <section id="pricing">
         <div class="product" id="exterior">
-            <div>Exterior Coating</div>
+            <div class="productTitle">EXTERIOR COATING</div>
             <img class="productImage" src="Exterior.jpg" alt="Exterior car coating image">
             <h2>$700</h2>
             <ol>
                 <li>General 3 Year coating.</li>
                 <li>Windows.</li>
                 <li>Rims.</li>
-                <li>complete exterior detailing.</li>
+                <li>Complete exterior detailing with black parts.</li><br>
             </ol>
             <button class="btn">Schedule</button>
         </div>
         <div class="product" id="interiorEngine">
-            <div>Full 3 Year detailing</div>
-            <img class="productImage" src="interior.jpg" alt="Exterior car coating image">
+            <div class="productTitle">FULL 3 YEAR DETAILING</div>
+            <img class="productImage" src="interior2.jpg" alt="Exterior car coating image">
             <h2>$850</h2>
             <ol>
                 <li>Complete Vehicle 3 Year coating.</li>
                 <li>Full Exterior Coating. </li>
                 <li>Interior detailing with coating protection.</li>
-                <li>Engine like new and protected.</li>
+                <li>Engine like new and protected.</li><br>
             </ol>
             <button class="btn">Schedule</button>
         </div>
         <div class="product" id="exterior">
-            <div>5 Year complete coating process</div>
+            <div class="productTitle">FULL 5 YEAR DETAILING</div>
             <img class="productImage" src="engine.jpg" alt="Exterior car coating image">
             <h2>$1.100</h2>
             <ol>
