--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <div id="page-wrapper">
         <header id="header">
             <nav id="nav-bar">
+                <div class="hamburger">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
                 <ul class="nav-Links">
                     <li class="headerImage"><a class="nav-link" href="#"><img id="header-img" src="#" alt="Future logo"></a></li>
                     <li><a class="nav-link" href="#features">Features</a></li>
