menu nav changes

--- a/index.html
+++ b/index.html
@@ -26,103 +26,106 @@
                 </ul>
             </nav>
         </header>
-        <div class="container"></div>
-        <section id="section1">
-            <h1>AUTOMOTIVE PERFECTION PASSIONATES</h1>
-            <img id="shiftImg" src="shifting.jpg" alt="Car shifting gear">
-            <form id="form" action="https://www.freecodecamp.com/email-submit">
-                <input id="email" name="email" type="email" placeholder="Enter your email address" required><br>
-                <input class="btn" id="submit" type="submit" value="GET STARTED">
-            </form>
-        </section>
-        <div class="container">
-            <section id="features">
-                <div class="grid">
-                    <div class="icon"><i class="fas fa-shield-alt fa-5x"></i></div>
-                    <div class="desc">
-                        <h2>Longtime Protection</h2>
-                        <p>From 3 and up to 5 years of total paint protection.</p>
+        <div class="content">
+            <div class="container"></div>
+            <section id="section1">
+                <h1>AUTOMOTIVE PERFECTION PASSIONATES</h1>
+                <img id="shiftImg" src="shifting.jpg" alt="Car shifting gear">
+                <form id="form" action="https://www.freecodecamp.com/email-submit">
+                    <input id="email" name="email" type="email" placeholder="Enter your email address" required><br>
+                    <input class="btn" id="submit" type="submit" value="GET STARTED">
+                </form>
+            </section>
+            <div class="container">
+                <section id="features">
+                    <div class="grid">
+                        <div class="icon"><i class="fas fa-shield-alt fa-5x"></i></div>
+                        <div class="desc">
+                            <h2>Longtime Protection</h2>
+                            <p>From 3 and up to 5 years of total paint protection.</p>
+                        </div>
                     </div>
+                    <div class="grid">
+                        <div class="icon"><i class="fas fa-money-bill-alt fa-5x"></i></div>
+                        <div class="desc">
+                            <h2>Saves Money</h2>
+                            <p>Adds multiple layers of paint protection to avoid expensive paint fixes.</p>
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="icon"><i class="fas fa-cloud-sun fa-5x"></i></div>
+                        <div class="desc">
+                            <h2>Fights Any Weather</h2>
+                            <p>Full protection against sun, rain, cold or any other weather condition.</p>
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="icon"><i class="fas fa-hand-sparkles fa-5x"></i></div>
+                        <div class="desc">
+                            <h2>Remains Clean</h2>
+                            <p>Hydrophobic properties prevent dirt to stick the paint, keeping your car clean during long journeys.</p>
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="icon"><i class="fas fa-car fa-5x"></i></div>
+                        <div class="desc">
+                            <h2>Your Vehicle</h2>
+                            <p>The MOST important for any automotive passionate, keep it stunning, shiny, and like brand new always.</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <section id="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YTd25YC_dNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+            <section id="pricing">
+                <div class="product" id="exterior">
+                    <div class="productTitle">EXTERIOR COATING</div>
+                    <img class="productImage" src="Exterior.jpg" alt="Exterior car coating image">
+                    <h2>$700</h2>
+                    <ol>
+                        <li>General 3 Year coating.</li>
+                        <li>Windows.</li>
+                        <li>Rims.</li>
+                        <li>Complete exterior detailing with black parts.</li><br>
+                    </ol>
+                    <button class="btn">Schedule</button>
                 </div>
-                <div class="grid">
-                    <div class="icon"><i class="fas fa-money-bill-alt fa-5x"></i></div>
-                    <div class="desc">
-                        <h2>Saves Money</h2>
-                        <p>Adds multiple layers of paint protection to avoid expensive paint fixes.</p>
-                    </div>
+                <div class="product" id="interiorEngine">
+                    <div class="productTitle">FULL 3 YEAR DETAILING</div>
+                    <img class="productImage" src="interior2.jpg" alt="Exterior car coating image">
+                    <h2>$850</h2>
+                    <ol>
+                        <li>Complete Vehicle 3 Year coating.</li>
+                        <li>Full Exterior Coating. </li>
+                        <li>Interior detailing with coating protection.</li>
+                        <li>Engine like new and protected.</li><br>
+                    </ol>
+                    <button class="btn">Schedule</button>
                 </div>
-                <div class="grid">
-                    <div class="icon"><i class="fas fa-cloud-sun fa-5x"></i></div>
-                    <div class="desc">
-                        <h2>Fights Any Weather</h2>
-                        <p>Full protection against sun, rain, cold or any other weather condition.</p>
-                    </div>
-                </div>
-                <div class="grid">
-                    <div class="icon"><i class="fas fa-hand-sparkles fa-5x"></i></div>
-                    <div class="desc">
-                        <h2>Remains Clean</h2>
-                        <p>Hydrophobic properties prevent dirt to stick the paint, keeping your car clean during long journeys.</p>
-                    </div>
-                </div>
-                <div class="grid">
-                    <div class="icon"><i class="fas fa-car fa-5x"></i></div>
-                    <div class="desc">
-                        <h2>Your Vehicle</h2>
-                        <p>The MOST important for any automotive passionate, keep it stunning, shiny, and like brand new always.</p>
-                    </div>
+                <div class="product" id="exterior">
+                    <div class="productTitle">FULL 5 YEAR DETAILING</div>
+                    <img class="productImage" src="engine.jpg" alt="Exterior car coating image">
+                    <h2>$1.100</h2>
+                    <ol>
+                        <li>Multiple protection layers applied to the entire Vehicle.</li>
+                        <li>Exterior included.</li>
+                        <li>Engine and Interior included.</li>
+                        <li>1 Maintenience product application included</li>
+                    </ol>
+                    <button class="btn">Schedule</button>
                 </div>
             </section>
+            <footer>
+                <ul>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                </ul>
+                <span>Copyright 2021, Daniel Cubides Car detailing</span>
+            </footer>
         </div>
-        <section id="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/YTd25YC_dNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
-        <section id="pricing">
-            <div class="product" id="exterior">
-                <div class="productTitle">EXTERIOR COATING</div>
-                <img class="productImage" src="Exterior.jpg" alt="Exterior car coating image">
-                <h2>$700</h2>
-                <ol>
-                    <li>General 3 Year coating.</li>
-                    <li>Windows.</li>
-                    <li>Rims.</li>
-                    <li>Complete exterior detailing with black parts.</li><br>
-                </ol>
-                <button class="btn">Schedule</button>
-            </div>
-            <div class="product" id="interiorEngine">
-                <div class="productTitle">FULL 3 YEAR DETAILING</div>
-                <img class="productImage" src="interior2.jpg" alt="Exterior car coating image">
-                <h2>$850</h2>
-                <ol>
-                    <li>Complete Vehicle 3 Year coating.</li>
-                    <li>Full Exterior Coating. </li>
-                    <li>Interior detailing with coating protection.</li>
-                    <li>Engine like new and protected.</li><br>
-                </ol>
-                <button class="btn">Schedule</button>
-            </div>
-            <div class="product" id="exterior">
-                <div class="productTitle">FULL 5 YEAR DETAILING</div>
-                <img class="productImage" src="engine.jpg" alt="Exterior car coating image">
-                <h2>$1.100</h2>
-                <ol>
-                    <li>Multiple protection layers applied to the entire Vehicle.</li>
-                    <li>Exterior included.</li>
-                    <li>Engine and Interior included.</li>
-                    <li>1 Maintenience product application included</li>
-                </ol>
-                <button class="btn">Schedule</button>
-            </div>
-        </section>
-        <footer>
-            <ul>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms</a></li>
-            </ul>
-            <span>Copyright 2021, Daniel Cubides Car detailing</span>
-        </footer>
     </div>
 </body>
+<script src="app.js"></script>
 </html>
