Image crashing updated

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="product" id="interiorEngine">
                     <div class="productTitle">FULL 3 YEAR DETAILING</div>
-                    <img class="productImage" src="interior2.jpg" alt="Exterior car coating image">
+                    <img class="productImage" src="Interior2.jpg" alt="Exterior car coating image">
                     <h2>$850</h2>
                     <ol>
                         <li>Complete Vehicle 3 Year coating.</li>
