--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="line"></div>
                 </div>
                 <ul class="nav-Links">
-                    <li class="headerImage"><a class="nav-link" href="#"><img id="header-img" src="#" alt="Future logo"></a></li>
+                    <li class="headerImage"><a class="nav-link" href="#"><img id="header-img" src="dscs.png" alt="Company logo"></a></li>
                     <li><a class="nav-link" href="#features">Features</a></li>
                     <li><a class="nav-link" href="#video">How it Works</a></li>
                     <li><a class="nav-link" href="#pricing">Pricing</a></li>
